# McSrvMgr

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: dlMgr.rs  main.rs  usrInp.rs
