[package]
name = "McSrvMgr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.46.1", features = ["rt-multi-thread","io-std","io-util","time","macros","fs"]}
reqwest = {version = "0.12.22", features = ["rustls-tls","json"]}
serde_json = "1.0.140"
sha2 = "0.10.9"
hex = "0.4.3"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"