[package]
name = "McSrvMgr"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = {version = "1.50.0", features = ["rt-multi-thread","io-std","io-util","time","macros","fs"]}
reqwest = {version = "0.13.2", features = ["blocking","json"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
hex = "0.4.3"
indicatif = "0.18.4"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"